# prosperity-ai

./: .gitignore  README.md  password-import.mjs  password-restore.mjs  password-rotate.mjs  prosperity-login.mjs  prosperity-voice.mjs  site-configs.json  vault-client.mjs
pixel-shield/: .gitignore  README.md  main.py  pyproject.toml
pixel-shield/core/: __init__.py  config.py  geometry.py  microshift.py  shuffle.py  theme.py
pixel-shield/modes/: __init__.py  config_dialog.py  screensaver.py  wallpaper.py
pixel-shield/packaging/: build_deb.sh
pixel-shield/platform_linux/: __init__.py  autostart.py  favorites.py  idle.py  imageops.py  monitors.py  paths.py  wallpaper_host.py
pixel-shield/render/: __init__.py  gl_window.py  offscreen.py  player.py  renderer.py  textures.py
pixel-shield/render/shaders/: crossfade.frag  image.vert
pixel-shield/tests/: conftest.py  manual_smoke.py  render_preview.py  render_rotation.py  test_config.py  test_favorites.py  test_geometry.py  test_idle.py  test_microshift.py  test_shuffle.py  test_theme.py  test_wallpaper.py
pixel-shield/themes/sample/: theme.json
vault/: Cargo.toml
vault/src/: api.rs  audit.rs  crypto.rs  main.rs  vault.rs
