[package]
name = "prosperity-vault"
version = "0.1.0"
edition = "2021"
description = "Secure credential vault for Prosperity AI"
license = "MIT"

[dependencies]
# Cryptography
sodiumoxide = "0.2.7"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"

# Secure memory
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
blake3 = "1.5"
base64 = "0.22"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
